--- a/service/discovery-service/build.gradle
+++ b/service/discovery-service/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.6'
 }
 
-group = 'com'
+group = ''
 version = ''
 
 java {
@@ -22,7 +22,7 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "2023.0.1")
+	set('springCloudVersion', "2023.0.3")
 }
 
 dependencies {
